--- a/package.json
+++ b/package.json
@@ -41,7 +41,15 @@
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.6.0",
     "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.2.0",
     "nodemon": "^2.0.4",
+    "prettier": "^2.2.1",
     "supertest": "^4.0.2",
     "tslint": "^6.1.3",
     "tslint-config-airbnb": "^5.11.2"
